--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>사실은 와꾸</title>
+  <title>starcraft</title>
   <h1>starcraft</h1>
   블리자드 엔터테인먼트에서 제작한 RTS 게임으로, 스타크래프트 오리지널은 1998년 3월 31일에 출시하였고, 확장팩인 스타크래프트: 브루드 워는 1998년 11월 30일에 출시하였다. 공식 지원 언어는 영어, 프랑스어, 독일어, 이탈리아어, 유럽 스페인어 5가지이다. # 다른 게임들처럼 원래 유료였지만, 2017년 3월 26일에 스타크래프트: 리마스터와 함께 무료화를 발표하였고, 2017년 4월 19일에 1.18 패치를 내놓으면서 무료로 전환하였다.[1] 2018년 3월 31일 자로 발매 20주년을 맞았다. 여담으로 2018년 현재 블리자드 FTP에서 데모버전 클라이언트 설치파일 링크도 여전히 살아있다.
 </head>
