--- a/1.html
+++ b/1.html
@@ -10,7 +10,7 @@
   <ol>
     <li><a href = "camel.html">terran</li>
     <li><a href = "mira.html">zerg</li>
-    <li><a href = "ghost.html">protoss</li>
+    <li><a href = "Ghost.html">protoss</li>
   </ol>
 </body>
 </html>
