--- a/Ghost.html
+++ b/Ghost.html
@@ -3,7 +3,7 @@
 <head>
   <title>soul</title>
   <h1>영혼</h1>
-그립읍니다.. 어디에 계신가요?
+  <p>그립읍니다.. 어디에 계신가요?</p>
 </head>
 <img src = "ob.jpg" width="30%">
 </html>
